--- a/wash.cabal
+++ b/wash.cabal
@@ -20,10 +20,11 @@ executable wash
     import:           warnings
     main-is:          Main.hs
     -- other-modules:
-    -- other-extensions:
+    default-extensions:
+        OverloadedStrings
     build-depends:    base ^>=4.17.2.1
                     , transformers
+                    , text
                     , parsec
-                    , haskeline
     hs-source-dirs:   src
     default-language: Haskell2010
